--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
     "pg": "^8.14.1",
+    "postchain-client": "^1.21.1",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
